syntax="proto3";

option go_package = "./proto";

package greet_service;

service GreetService {
    rpc SayHello (NoParam) returns (HelloResponse);

    rpc SayHelloServerStreaming(NamesList) returns (stream HelloResponse); // client <- - -> server (stream type)

    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessagesList); // client (stream type) <- - -> server

    rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse); // client (stream) <- - -> server (stream), used very commonly
}

message NoParam{};

// Send a name, get response back
message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}

message NamesList{
    repeated string names = 1;
}

message MessagesList{
    repeated string messages = 1;
}
